fix overflow conflicts

--- a/src/sass/_uploader.scss
+++ b/src/sass/_uploader.scss
@@ -1,15 +1,6 @@
 .Uploader {
   height: 100%;
   max-height: 100%;
-  overflow: hidden;
-}
-
-.Uploader-table-container {
-  width: 99%;
-  max-height: 95%;
-  margin: .5%;
-  margin-bottom: 30px;
-  overflow: scroll;
 }
 
 .Uploader-dropzone {
@@ -21,11 +12,12 @@
   border-radius: 4px;
   margin: 10px;
 }
-
+.Uploader-table-container {
+  overflow:scroll;
+}
 .Uploader-datatable {
   display: table;
   border-collapse: collapse;
-  overflow: scroll;
   border-spacing: 0;
   font-size: .75em;
 
